Fixed some color layout issues;

--- a/src/css/sis_main.css
+++ b/src/css/sis_main.css
@@ -149,8 +149,12 @@ email:     thomasdemeo@gmail.com
 #ACE_DERIVED_SSS_SCL_SSS_SC_LNK1_NAME,
 #ACE_DERIVED_SSS_SCL_SSS_SC_LNK2_NAME,
 #ACE_DERIVED_SSS_SCL_SSS_SC_LNK3_NAME,
-#ACE_DERIVED_SSS_SCL_SSS_GO_4{
+#ACE_DERIVED_SSS_SCL_SSS_GO_4 {
     background-color: #DFDECB;
+}
+
+#ACE_DERIVED_SSS_ENR_GROUP_BOX {
+	background-color: #F8F7ED;
 }
 
 .PSLONGEDITLABEL, 
